# routes/api.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\Api\V1\AuthController;
 use App\Http\Controllers\Api\V1\BoardColumnController;
 use App\Http\Controllers\Api\V1\IssueController;
+use App\Http\Controllers\Api\V1\LabelController;
 use App\Http\Controllers\Api\V1\ProjectController;
 use App\Http\Controllers\Api\V1\SprintController;
 use Illuminate\Support\Facades\Route;
@@ -20,4 +21,5 @@ Route::middleware(['auth:sanctum', 'abilities:mobile'])->group(function (): void
     Route::get('projects/{project}/issues/{issue}', [IssueController::class, 'show'])->name('api.v1.projects.issues.show');
     Route::get('projects/{project}/board-columns', [BoardColumnController::class, 'index'])->name('api.v1.projects.board-columns.index');
     Route::get('projects/{project}/sprints', [SprintController::class, 'index'])->name('api.v1.projects.sprints.index');
+    Route::get('projects/{project}/labels', [LabelController::class, 'index'])->name('api.v1.projects.labels.index');
 });
